--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,7 @@ author_links:
 
 # Hero screenshot shown inside the banner
 hero_preview: "/Human-Resources-Data-Visualization-Dashboard/assets/images/finished-dashboard.png"
+hero_screenshot_url: "/Human-Resources-Data-Visualization-Dashboard/assets/images/finished-dashboard.png"
 
 # Comic-strip images for Summary (upload your cartoons to these paths)
 cartoon_context: "/Human-Resources-Data-Visualization-Dashboard/assets/images/story-context.png"
