--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Human Resources Data Visualization Dashboard"
+title: "Project 2 | Human Resource Dashboard"
 description: "Leadership-facing HR analytics: Attrition, Hiring Funnel, Diversity, and Compensation."
 author: "Liad Mizrachi"
 
@@ -22,29 +22,24 @@ author_links:
     url: "mailto:Liad%20Mizrachi%20<FindLiad@gmail.com>"
     icon: "✉️"
 
-# ===== HERO content =====
-# Heading shown in the banner; falls back to site.title if blank
-project_heading: "Project 2 | Human Resource Dashboard"
-
-# Screenshot inside the banner
-hero_preview: "/Human-Resources-Data-Visualization-Dashboard/assets/images/finished-dashboard.png"
+# Banner preview image
 hero_screenshot_url: "/Human-Resources-Data-Visualization-Dashboard/assets/images/finished-dashboard.png"
 
-# Comic-strip images for Summary (you already uploaded these)
+# Split title so we can control desktop vs mobile layout
+project_label: "Project 2"
+project_title: "Human Resource Dashboard"
+
+# Comic-strip images (1200×800)
 cartoon_context: "/Human-Resources-Data-Visualization-Dashboard/assets/images/story-context.png"
 cartoon_action:  "/Human-Resources-Data-Visualization-Dashboard/assets/images/story-action.png"
 cartoon_result:  "/Human-Resources-Data-Visualization-Dashboard/assets/images/story-result.png"
 
-# Buttons (hero)
+# Links for hero buttons / nav
 live_dashboard_url: "https://public.tableau.com/app/profile/liad.mizrachi/viz/HRProject_17554488176360/hr_dashboard?publish=yes"
 prd_url: "/Human-Resources-Data-Visualization-Dashboard/assets/docs/Product_Requirements_Document.pdf"
-
-# Top menu links
-menu_home_label: "✨Main Menu✨"
-menu_home_url: "https://findliad.github.io/"
-prev_project_url: "https://findliad.github.io"   # <- update if you have a real previous project
-next_project_url: "https://findliad.github.io"   # <- update if you have a real next project
-return_portfolio_url: "https://findliad.github.io/"
+last_project_url: "https://findliad.github.io/Data-Backed-Decision-Making-for-Youtube-Campaigns/"
+home_portfolio_url: "https://findliad.github.io/"
+next_project_url: "https://findliad.github.io/"   # change when you have Project 3
 
 remote_theme: "pages-themes/cayman@v0.2.0"
 plugins:
