--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Project 2 | Human Resource Dashboard"
+title: "Human Resources Data Visualization Dashboard"
 description: "Leadership-facing HR analytics: Attrition, Hiring Funnel, Diversity, and Compensation."
 author: "Liad Mizrachi"
 
@@ -22,23 +22,20 @@ author_links:
     url: "mailto:Liad%20Mizrachi%20<FindLiad@gmail.com>"
     icon: "✉️"
 
-# Banner screenshot
+# Hero screenshot shown inside the banner
 hero_preview: "/Human-Resources-Data-Visualization-Dashboard/assets/images/finished-dashboard.png"
 hero_screenshot_url: "/Human-Resources-Data-Visualization-Dashboard/assets/images/finished-dashboard.png"
 
-# Story images (your new 1200x800 assets)
+# Comic-strip images for Summary
 cartoon_context: "/Human-Resources-Data-Visualization-Dashboard/assets/images/story-context.png"
 cartoon_action:  "/Human-Resources-Data-Visualization-Dashboard/assets/images/story-action.png"
 cartoon_result:  "/Human-Resources-Data-Visualization-Dashboard/assets/images/story-result.png"
 
-# Links
+# Links used by the hero buttons
 live_dashboard_url: "https://public.tableau.com/app/profile/liad.mizrachi/viz/HRProject_17554488176360/hr_dashboard?publish=yes"
-prd_url: "/Human-Resources-Data-Visualization-Dashboard/assets/docs/Product_Requirements_Document.pdf"
 
-menu:
-  last_project_url: "https://findliad.github.io/Data-Backed-Decision-Making-for-Youtube-Campaigns/"
-  home_portfolio_url: "https://findliad.github.io/"
-  next_project_url: "https://findliad.github.io/" # update when you have Project 3
+# Optional: next project link for the main menu (can be replaced later)
+next_project_url: "#"
 
 remote_theme: "pages-themes/cayman@v0.2.0"
 plugins:
