--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ baseurl: "/Human-Resources-Data-Visualization-Dashboard"
 url: "https://findliad.github.io"
 
 author_title: "Senior Product Manager"
+author_subtitle: "I’m an independent critical thinker pursuing projects that deepen my technical fluency and showcase product sense in real-world scenarios."
 author_photo: "/Human-Resources-Data-Visualization-Dashboard/assets/images/liad-mizrachi.jpg"
 
 author_links:
